--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</header>
 	<nav>
 		<div>
-			<a href="help.html">Help</a>
+			<a href="editor.html" style="font-style: italic;">Textdoc</a>
 		</div>
 		<div>
 			<a href="login.html">Login</a>
@@ -106,12 +106,10 @@
 	</nav>
 	<div class="container">
 		<div class="text-editor">
-			<h2>Text Editor</h2>
-			<p>Use the text editor below to write your content:</p>
-			<div contenteditable="true">
-				<p>Start typing here...</p>
-			</div>
-			<button class="btn"><a href="editor.html"> Get Started</a></button>
+			<h2 style="font-size: 20px; font-weight: bolder; color: #271d95; text-align: center;">Text Editor</h2>
+			<p>A web app that allows you to create, edit, share and save text files to your device. A plain text editor that allows you to keep notes throughout the day, create a list, write or edit code without worrying about unwanted auto formatting. Copy & Paste text to and from Textdoc without formatting including unwanted characters. This allows you to clean up text before it's pasted in email or chat platforms. </p>
+			
+			<button style="color: white; background-color: black;"><a href="editor.html"> Edit Files Here</a></button>
 		</div>
 		<!-- <div class="preview">
 			<h2>Preview</h2>
