--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@
 			<input type="text" id="username" name="username">
 			<label for="password">Password:</label>
 			<input type = "password" id="password" name="password">
-            <input type="submit" value="Login">
+          <a href="editor.html"><input type="submit" value="Login"></a>
             </form>
             <div class="login-options">
             <h3>Or login with:</h3>
