--- a/signup.html
+++ b/signup.html
@@ -100,7 +100,7 @@
 			<input type="password" id="re-enter-password" name="re-enter-password" required>
 			<label for="terms-conditions">I accept the <a href="#">terms and conditions</a></label>
 			<input type="checkbox" id="terms-conditions" name="terms-conditions" required>
-			<input type="submit" value="Sign Up">
+			<a href="login.html"><input type="submit" value="Sign Up"></a>
 		</form>
 	</div>
 </body>
