--- a/editor.html
+++ b/editor.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced text Editor</title>
+    <title>Textdoc</title>
 </head>
 <body>
-    <h3>Advanced Text Editor</h3>
+    <h3 style="font-size: 30px; font-weight: bolder; color: #271d95; ">Textdoc</h3>
     <form action="" method="post">
         <textarea name="textarea" id="default"  ></textarea>
-        <input type="submit" value="submit">
+        <!-- <input type="submit" value="submit"> -->
     </form>
     <script src="tinymce\tinymce.min.js"></script>
     <script src="script.js"></script>
